2012-03-04  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: mkvmerge will keep the "enabled" track
	header flag when muxing. mkvmerge will also output its value in
	verbose identification mode as "enabled_track".

	* mkvmerge: enhancement: MicroDVD text subtitles are recognized as
	an unsupported format instead of an unknown format.

	* mmg: The warning that no default duration/FPS has been given for
	AVC/h.264 tracks has been removed.

	* mkvmerge: bug fix: Complete re-write of the timecode handling
	code for AVC/h.264 tracks. Now handles several cases correctly:
	interlaced video, video with multiple or changing SPS with
	different timing information. The timing information is extracted
	from the bitstream. Therefore the user doesn't have to specify the
	default duration/FPS himself anymore. Fix for bugs 434 and 688.

2012-02-26  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Boost's "rational" library is now required.

	* mkvmerge: bug fix: Complete re-write of the (E)AC3 parsing and
	handling code. Dependent EAC3 frames are now handled
	correctly. Fix for bug 704.

2012-02-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The width and height of h.264 video tracks
	with a pixel format other than 4:2:0 are now calculated
	correctly. Fix for bug 649. Patch by Nicholai Main (see AUTHORS).

	* mkvmerge: bug fix: Fixed file type recognition and frame drops
	for VC1 elementary streams that do not start with a sequence
	header but with frame or field packets instead.

	* mkvmerge: bug fix: Fixed mis-detection as unsupported DV files
	(happened for e.g. PGS subtitle files).

2012-02-12  Moritz Bunkus  <moritz@bunkus.org>

	* doc: enhancement: Updates for option file usage and supported
	subtitle formats.

2012-02-09  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.3.0.

2012-02-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: mkvmerge will parse and apply the audio