@@ -191,3 +191,4 @@ T_342m2ts_interlaced_h264_from_arte:8c4d727aa228e4738c598e3ddc9d4571:passed:2012
 T_343m2ts_interlaced_h264_match_of_the_day:fdab49f2f33981826793bb66aab97ca5:passed:20120304-171453:2.873804415
 T_344microdvd_recognition:ok:passed:20120304-175209:0.082792556
 T_345flag_enabled:efe07b85cd349a040ed79402256bd6ea-89e9b90881c73d55ac4eda07e20effe5:passed:20120304-181150:0.135757829
+T_347h264_misdetected_as_ac3:4dcd5541b962ce1d534e04481deadbec:passed:20120305-160017:2.617159557
